--- a/data-science/accident_analysis/requirements.txt
+++ b/data-science/accident_analysis/requirements.txt
@@ -1,5 +1,101 @@
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
+asgiref==3.4.1
+astroid==2.6.6
+attrs==21.2.0
+autopep8==1.5.7
+backcall==0.2.0
+beautifulsoup4==4.9.3
+bleach==4.0.0
+bs4==0.0.1
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+click==8.0.1
+cssselect==1.1.0
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
+entrypoints==0.3
+fake-useragent==0.1.11
+fastapi==0.67.0
+h11==0.12.0
+idna==3.2
+iniconfig==1.1.1
+ipykernel==6.2.0
+ipython==7.26.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+isort==5.9.3
+jedi==0.18.0
+Jinja2==3.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.0.0
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+lazy-object-proxy==1.6.0
+lxml==4.6.3
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+mercurial==5.7
+mistune==0.8.4
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.3
 numpy==1.21.2
-pandas==1.3.3
+packaging==21.0
+pandocfilters==1.4.3
+parse==1.19.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==1.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.19
+protobuf==3.13.0
+ptyprocess==0.7.0
+py==1.10.0
+pycodestyle==2.7.0
+pycparser==2.20
+pydantic==1.8.2
+pyee==8.1.0
+Pygments==2.10.0
+pylint==2.9.6
+pyparsing==2.4.7
+pyppeteer==0.2.5
+pyquery==1.4.3
+pyrsistent==0.18.0
+pytest==6.2.5
 python-dateutil==2.8.2
-pytz==2021.1
-six==1.16.0
+pyzmq==22.2.1
+qtconsole==5.1.1
+QtPy==1.10.0
+requests==2.26.0
+requests-html==0.10.0
+selenium==3.141.0
+Send2Trash==1.8.0
+six==1.15.0
+soupsieve==2.2.1
+starlette==0.14.2
+terminado==0.11.1
+testpath==0.5.0
+toml==0.10.2
+tornado==6.1
+tqdm==4.62.0
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+uvicorn==0.14.0
+w3lib==1.22.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==8.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
